build(site): updating type for commit message and forgot to save before pushing.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="https://lh3.googleusercontent.com/j4-xnAU4r50vGpHVJF8LWssuZODV82GG5FwR0qN5fzvrt4qiGIDPGOv3yZCXBX5gTOgHA_2_OSq2ItS4ATkqWQ=w1280-h1280-c-rw-v1-e365" alt="Chocolate chip cookies with walnuts" style="height: 300px">
     <br>
     <br>
-    <p>Here is what the recipe calls for</p>
+    <p>Here is what the recipe calls for</>
         <p style="margin-left: 40px; margin-bottom: 0px;"><b>Ingredients</b> (probably not right...)</p>
             <ul style="margin-top:0px;">
                 <li>6 Eggs</li>
